# zeit

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LAUNCHD_SETUP.md  MENUBAR_SETUP.md  Package.resolved  README.md  REFACTORING.md  REFACTORING_OPPORTUNITIES.md  activity_id.py  activity_summarization.py  build.sh  build_all.sh  build_app.sh  co.invariante.zeit.menubar.plist  co.invariante.zeit.plist  collect_implemented_features.sh  conf.yml  config.py  db.py  entitlements.plist  features.json  flush-features.sh  future-features.json  ideas.md  implement_features.sh  main.py  manage_db.py  menubar_app.py  pyproject.toml  resume_tracking.sh  run_menubar_app.py  run_tracker.py  run_tracker.sh  run_view_data.py  setup.py  stop_tracking.sh  (+2 more)
.github/workflows/: context-window-budget.yml  markdown-links.yml  token-budget.yml  verify-docs.yml
Sources/ZeitApp/: main.swift
Sources/ZeitApp/App/: ZeitApp.swift
Sources/ZeitApp/CLI/: DatabaseHelper.swift  DoctorCommand.swift  ListActivityTypesCommand.swift  ServiceCommand.swift  SetActivityTypesCommand.swift  (+5 more)
Tests/ZeitAppTests/: ZeitAppTests.swift
ZeitApp/: Package.resolved  Package.swift  build.sh
docs/: BUILD.md  FUTURE-BUILD.md  implemented-features.json  token-counts.md
docs/product-specs/: cli.md  custom-activity-types.md  day-summarization.md  index.md  menubar.md  onboarding.md  recurring-tracking.md  sampling.md
large-features-specs/: custom-activity-types.md
mcp-app/: README.md  main.ts  mcp-app.html  package-lock.json  package.json  server.ts
mcp-app/src/: global.css  mcp-app.css  mcp-app.ts
scripts/: check-markdown-links.sh  create_dmg.sh  install.py  token-counter.py  token-counts-report.py  verify-docs-in-sync-with-code.sh
scripts/hooks/: pre-commit
scripts/verify-docs-in-sync-with-code/: package-lock.json  package.json
src/zeit/: __init__.py
(+120 files in other folders)
