[project]
name = "zeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "mss>=10.1.0",
    "ollama>=0.6.1",
    "opik>=1.9.33",
    "py2app>=0.28.9",
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
]
