[project]
name = "zeit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "mss>=10.1.0",
    "ollama>=0.6.1",
    "opik>=1.9.33",
    "py2app>=0.28.9",
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "mypy>=1.14.0",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
    "ANN",    # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) - needed for Pydantic validators
]

[tool.ruff.lint.per-file-ignores]
"src/zeit/core/prompts.py" = ["E501"]
"src/zeit/processing/day_summarizer.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "build/",
    "dist/",
    ".venv/",
]
